--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header-inner">
+          <h1><a href="./index.html"> Logo </a></h1>
+        </div>
+      </div>
+    </header>
 
     <script src="./main.js"></script>
-</body>
+  </body>
 </html>
